hard-gists/98bb452dc14e8c40e403/run.log
=== Docker Run Log for 98bb452dc14e8c40e403 ===
Started at: Mi 29. Okt 18:34:49 CET 2025

[2025-10-29 18:34:49] START: Running container for 98bb452dc14e8c40e403
[2025-10-29 18:34:49] SUCCESS: Container 0b91be9c66e059ab912ac6fa004c653bb0dd9b1bfe2995c605ee2859926358e3 started for 98bb452dc14e8c40e403
=== Container logs for 98bb452dc14e8c40e403 ===
  File "/snippet.py", line 30
    print d[d.find("0ctf"):].strip()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 98bb452dc14e8c40e403 ===
[2025-10-29 18:34:51] INFO: Container 0b91be9c66e059ab912ac6fa004c653bb0dd9b1bfe2995c605ee2859926358e3 has stopped
